Debugging and filling in wordgram persistence